--- a/_posts/2013-12-28-About.md
+++ b/_posts/2013-12-28-About.md
@@ -7,7 +7,8 @@ I'm Hrishikesh P a student Game designer and programmer. I'm a sophomore at Amri
 
 ### As a Game Designer
 
-Making games is my passion and I want to be able to express myself through my games and hope to work on major titles someday. Each day's work is a step forward towards this goal.
+Making games is my passion and I want to be able to express myself through my games and hope to work on major titles someday. Each day's work is a step forward towards this goal.<br />
+I realize that I don't know everything and I might 've started out late but I recognize my weak points and strive to imporve myself every day.
 
 #### Tech stack I'm familiar with
 * Game Engines: Unreal Engine, Unity
@@ -37,7 +38,7 @@ The following are some of the solo projects I've worked on while learning the ba
     <tbody>
         <tr>
             <td>Not Today</td>
-            <td>A VR sim documenting illegal organ harvesting made for the VR in journalism competition conducted by University of North Carolina.</td>
+            <td>A VR sim documenting illegal organ harvesting which won the VR in journalism competition conducted by University of North Carolina.</td>
         </tr>
     </tbody>
 </table>
@@ -46,24 +47,26 @@ The following are some of the solo projects I've worked on while learning the ba
     <tbody>
         <tr>
             <td>Transit</td>
-            <td>A 3D tunnel bus designed in Blender for the VR design challenge conducted by University of Windsor.</td>
+            <td>A 3D tunnel bus designed in Blender which won the VR design challenge conducted by University of Windsor.</td>
         </tr>
     </tbody>
 </table>
-
+![Transit](https://github.com/HrishikeshP-01/Safe-Transit-3D-Tunnel-Bus-Design/blob/main/3.png?raw=true)
 <table>
     <tbody>
         <tr>
             <td>Wolfie</td>
-            <td>A hypercasual animal RPG where you play as a wolf that has to take down his hunter.</td>
+            <td>A hypercasual animal RPG where you play as a wolf that has to take down his hunter. It won the Best Game award in BotHacks 2020</td>
         </tr>
     </tbody>
 </table>
+![Wolfie](https://github.com/HrishikeshP-01/WolfieBeta/blob/master/WhatsApp%20Image%202020-08-18%20at%209.15.00%20PM.jpeg?raw=true)
 <table>
     <tbody>
         <tr>
             <td>Pong Ultima</td>
-            <td>Implemented various algorithms for the AI agents, designed the game from scratch using C++ and SDL.</td>
+            <td>Implemented various algorithms for the AI agents, designed the game from scratch using C++ and SDL. It won the Apollo Hacks for the AI implementation.</td>
         </tr>
     </tbody>
 </table>
+![Pong](https://github.com/HrishikeshP-01/Pong-Ultima/blob/master/Result/1.png?raw=true)
