Added Not Today GDD

--- a/_posts/2013-12-28-About.md
+++ b/_posts/2013-12-28-About.md
@@ -38,7 +38,7 @@ The following are some of the solo projects I've worked on while learning the ba
     <tbody>
         <tr>
             <td>Not Today</td>
-            <td>A VR sim documenting illegal organ harvesting which won the VR in journalism competition conducted by University of North Carolina.</td>
+            <td>A VR sim documenting illegal organ harvesting which won the VR in journalism competition conducted by University of North Carolina. Game Design Doc can be found <a href="https://docs.google.com/document/d/1D7u1pJaPU5Va_j8Hy1Xur4bsGJfM_KXnPNR6ucr-_7A/edit?usp=sharing">here</a></td>
         </tr>
     </tbody>
 </table>
