Added GDD for Wolfie

--- a/_posts/2013-12-28-About.md
+++ b/_posts/2013-12-28-About.md
@@ -46,21 +46,21 @@ The following are some of the solo projects I've worked on while learning the ba
 <table>
     <tbody>
         <tr>
+            <td>Wolfie</td>
+            <td>A hypercasual animal RPG where you play as a wolf that has to take down his hunter. It won the Best Game award in BotHacks 2020. Game Design Doc can be found [here](https://docs.google.com/document/d/1Kvwrk31A5cOyVnDGCEqPLDX5AfmIZRm0X6wWcvScekc/edit?usp=sharing)</td>
+        </tr>
+    </tbody>
+</table>
+![Wolfie](https://github.com/HrishikeshP-01/WolfieBeta/blob/master/WhatsApp%20Image%202020-08-18%20at%209.15.00%20PM.jpeg?raw=true)
+<table>
+    <tbody>
+        <tr>
             <td>Transit</td>
             <td>A 3D tunnel bus designed in Blender which won the VR design challenge conducted by University of Windsor.</td>
         </tr>
     </tbody>
 </table>
 ![Transit](https://github.com/HrishikeshP-01/Safe-Transit-3D-Tunnel-Bus-Design/blob/main/3.png?raw=true)
-<table>
-    <tbody>
-        <tr>
-            <td>Wolfie</td>
-            <td>A hypercasual animal RPG where you play as a wolf that has to take down his hunter. It won the Best Game award in BotHacks 2020</td>
-        </tr>
-    </tbody>
-</table>
-![Wolfie](https://github.com/HrishikeshP-01/WolfieBeta/blob/master/WhatsApp%20Image%202020-08-18%20at%209.15.00%20PM.jpeg?raw=true)
 <table>
     <tbody>
         <tr>
