Corrected the hyperlink

--- a/_posts/2013-12-28-About.md
+++ b/_posts/2013-12-28-About.md
@@ -47,7 +47,7 @@ The following are some of the solo projects I've worked on while learning the ba
     <tbody>
         <tr>
             <td>Wolfie</td>
-            <td>A hypercasual animal RPG where you play as a wolf that has to take down his hunter. It won the Best Game award in BotHacks 2020. Game Design Doc can be found [here](https://docs.google.com/document/d/1Kvwrk31A5cOyVnDGCEqPLDX5AfmIZRm0X6wWcvScekc/edit?usp=sharing)</td>
+            <td>A hypercasual animal RPG where you play as a wolf that has to take down his hunter. It won the Best Game award in BotHacks 2020. Game Design Doc can be found <a href="https://docs.google.com/document/d/1Kvwrk31A5cOyVnDGCEqPLDX5AfmIZRm0X6wWcvScekc/edit?usp=sharing">here</a></td>
         </tr>
     </tbody>
 </table>
