--- a/_posts/2013-12-28-About.md
+++ b/_posts/2013-12-28-About.md
@@ -16,17 +16,9 @@ I realize that I don't know everything and I might 've started out late but I re
 * Software: Blender, Maya, Adobe Photoshop, Audacity
 * Version Control: Perforce, Git
 
-### As a Programmer
-
-I believe that one of the greatest assets of a game designer is the ability to think like the programmer. The importance of approaching a problem logically and coming up with the most optimum and cost-effective solution can't be stressed enough.
-
-#### Tech stack I'm familiar with
-* Languages: C++, Python, Java, JS, Dart
-* Frameworks: React, Electron, Flutter.
-
 ### Projects
 
-The following are some of the solo projects I've worked on while learning the basics of game development.
+The following are some of the solo projects I've worked on while learning the basics of game design.
 
 <table>
     <thead>
