--- a/_posts/2013-12-28-About.md
+++ b/_posts/2013-12-28-About.md
@@ -3,12 +3,7 @@ layout: post
 title: About
 ---
 
-I'm Hrishikesh P a student Game designer and programmer. I'm a sophomore at Amrita College of Engineering.
-
-### As a Game Designer
-
-Making games is my passion and I want to be able to express myself through my games and hope to work on major titles someday. Each day's work is a step forward towards this goal.<br />
-I realize that I don't know everything and I might 've started out late but I recognize my weak points and strive to imporve myself every day.
+I'm Hrishikesh P a student Game designer and a sophomore at Amrita College of Engineering.
 
 #### Tech stack I'm familiar with
 * Game Engines: Unreal Engine, Unity
